# CardShop

./: .gitignore  CardShop.sln  README.md
CardShop/: CardShop.csproj  CardShop.http  CardTestDb  DesignNotes.md  Dockerfile  Program.cs  StaticHelpers.cs  WeatherForecast.cs  appsettings.json
CardShop/ConfigurationClasses/: EnumSchemaFilter.cs  SnakeCasePropertyNamesContractResolver.cs
CardShop/Constants/: CardSetConstants.cs
CardShop/Controllers/: AdminController.cs  CardShop.cs  DeckController.cs  TestingController.cs  UserController.cs  WeatherForecastController.cs
CardShop/DbModels/: Card.cs
CardShop/Enums/: CardSetCode.cs  DeckType.cs  RarityCode.cs  Role.cs
CardShop/Extensions/: DeckExtensions.cs  InventoryExensions.cs
CardShop/Interfaces/: ICardProductBuilder.cs  ICardTestRepository.cs  IDeckManager.cs  IDeckRepository.cs  IInventoryManager.cs  IInventoryRepository.cs  IShopManager.cs  IUserManager.cs  IUserRepository.cs
CardShop/Logic/: CardProductBuilder.cs  DbBuilder.cs  DeckManager.cs  InventoryManager.cs  ShopManager.cs  TokenManager.cs  UserManager.cs
CardShop/Models/: BoosterBox.cs  BoosterPack.cs  Card.cs  CardPack.cs  CardPool.cs  CardSet.cs  CardSetInfo.cs  Deck.cs  InventoryItem.cs  InventoryItemInternal.cs  Product.cs  ProductPool.cs
CardShop/Properties/: launchSettings.json
CardShop/Repositories/: CardTestDb  CardTestRepository.cs  DeckRepository.cs  InventoryRepository.cs  UserRepository.cs
utils/rarity_tester/: Cargo.toml
utils/rarity_tester/src/: main.rs
utils/rarity_tester/src/cards/: mod.rs  pr.rs
(+73 files in other folders)
